accounts app 생성 및 user 모델 정의

--- a/.gitignore
+++ b/.gitignore
@@ -155,8 +155,12 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 venv/
-obuboic/secrets.py
+obuboic/my_secrets.py
 obuboic/manage.py
 obuboic/db.sqlite3
 
 .idea/
+__pycache__
+*.pyc
+
+migrations
